reviews overlap on mobile fix

--- a/sass/components/_bubble.scss
+++ b/sass/components/_bubble.scss
@@ -40,8 +40,8 @@
     overflow: hidden;
 
     @include respond(phone) {
-      height: 14rem;
-      width: 14rem;
+      height: 12rem;
+      width: 12rem;
     }
     @include respond(sm-phone) {
       height: 12rem;
